asset-dashboard-bff/deployments/dashboard-bff.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dashboard-bff
  name: dashboard-bff
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard-bff
    spec:
      containers:
      - image: ibmcase/dashboard-bff
        imagePullPolicy: IfNotPresent
        name: dashboard-bff
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
 
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-bff-svc
  labels:
    chart: dashboard-bff
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: dashboard-bff-svc
  selector:
    app: dashboard-bff
