asset-dashboard-bff/deployments/dashboard-bff-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-bff
  labels:
    app: dashboard-bff
spec:
  rules:
    - host: assetmanagement.greencompute.ibmcase.com
      http:
        paths:
          - path: /dashboardbff
            backend:
              serviceName: dashboard-bff-svc
              servicePort: 8080
